--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "bootstrap": "^5.3.0",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
