--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@popperjs/core": "2.11.7",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -39,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "scrypt-async": "^2.0.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
